compiler-core/src/type_/tests/snapshots/glistix_core__type___tests__nix__nix_unsafe_int_decimal.snap
---
source: compiler-core/src/type_/tests/nix.rs
expression: "\n  [\n    9_223_372_036_854_775_806,\n    9_223_372_036_854_775_807,\n    9_223_372_036_854_775_808,\n    -9_223_372_036_854_775_806,\n    -9_223_372_036_854_775_807,\n    -9_223_372_036_854_775_808,\n  ]\n"
---
----- SOURCE CODE

  [
    9_223_372_036_854_775_806,
    9_223_372_036_854_775_807,
    9_223_372_036_854_775_808,
    -9_223_372_036_854_775_806,
    -9_223_372_036_854_775_807,
    -9_223_372_036_854_775_808,
  ]


----- ERROR
error: Int is outside Nix's integer range
  ┌─ /src/one/two.gleam:5:5
  │
5 │     9_223_372_036_854_775_808,
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^

This integer value is too large to be represented by Nix's integer type. To
avoid this error integer values must be in the range -(2^63 - 1) - (2^63 -
1).

error: Int is outside Nix's integer range
  ┌─ /src/one/two.gleam:8:5
  │
8 │     -9_223_372_036_854_775_808,
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^

This integer value is too large to be represented by Nix's integer type. To
avoid this error integer values must be in the range -(2^63 - 1) - (2^63 -
1).
